@@ -939,19 +939,19 @@
 2288,7:7:7:9:9:9:9:11:11:11,8,1,-1,0,0,10,-3,yes,0,0,0,weapon,4,	SC_TRIANGLESHOT,Triangle Shot
 2289,0,6,4,0,0x3,5,5,1,no,0,0,0,none,0,		SC_BODYPAINT,Body Painting
 2290,0,6,4,0,0x1,0,5,1,yes,0,0,0,none,0,	SC_INVISIBILITY,Invisibility
-2291,0,6,4,0,0x1,0,5,1,no,0,0,0,misc,0,		SC_DEADLYINFECT,Deadly Infect
-2292,3,6,1,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_ENERVATION,Masquerade - Enervation
-2293,3,6,1,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_GROOMY,Masquerade - Gloomy
-2294,3,6,1,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_IGNORANCE,Masquerade - Ignorance
-2295,3,6,1,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_LAZINESS,Masquerade - Laziness
-2296,3,6,1,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_UNLUCKY,Masquerade - Unlucky
-2297,3,6,1,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_WEAKNESS,Masquerade - Weakness
+2291,0,6,4,0,0x1,0,5,1,no,0,0,0,none,0,		SC_DEADLYINFECT,Deadly Infect
+2292,3,6,1,0,0x1,0,3,1,no,0,0,0,none,0,		SC_ENERVATION,Masquerade - Enervation
+2293,3,6,1,0,0x1,0,3,1,no,0,0,0,none,0,		SC_GROOMY,Masquerade - Gloomy
+2294,3,6,1,0,0x1,0,3,1,no,0,0,0,none,0,		SC_IGNORANCE,Masquerade - Ignorance
+2295,3,6,1,0,0x1,0,3,1,no,0,0,0,none,0,		SC_LAZINESS,Masquerade - Laziness
+2296,3,6,1,0,0x1,0,3,1,no,0,0,0,none,0,		SC_UNLUCKY,Masquerade - Unlucky
+2297,3,6,1,0,0x1,0,3,1,no,0,0,0,none,0,		SC_WEAKNESS,Masquerade - Weakness
 2298,1,6,1,0,0x1,0,5,1,no,0,0,0,weapon,0,	SC_STRIPACCESSARY,Strip Accessory
 2299,7,6,2,0,0x1,0,3,1,no,0,0,3,misc,0,		SC_MANHOLE,Man Hole
-2300,7,6,2,0,0x1,0,3,1,no,0,0,1,misc,0,		SC_DIMENSIONDOOR,Dimension Door
-2301,9,6,2,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_CHAOSPANIC,Chaos Panic
-2302,7,6,2,0,0x3,5,3,1,yes,0,0,0,misc,0,		SC_MAELSTROM,Maelstrom
-2303,9,6,2,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_BLOODYLUST,Bloody Lust
+2300,7,6,2,0,0x1,0,3,1,no,0,0,1,none,0,		SC_DIMENSIONDOOR,Dimension Door
+2301,9,6,2,0,0x1,0,3,1,no,0,0,0,none,0,		SC_CHAOSPANIC,Chaos Panic
+2302,7,6,2,0,0x3,5,3,1,yes,0,0,0,none,0,		SC_MAELSTROM,Maelstrom
+2303,9,6,2,0,0x1,0,3,1,no,0,0,0,none,0,		SC_BLOODYLUST,Bloody Lust
 2304,0,6,4,0,0x3,4,3,1,yes,0,0,0,weapon,0,		SC_FEINTBOMB,Feint Bomb
 
 // Royal Guard
